<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_sensors"
        style="@style/TextAppearance.AppCompat.Headline"/>
    <ScrollView
        android:id="@+id/scroll_sensor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/sensor_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </ScrollView>
    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_info"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/label_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_sensor_format" />
    <TextView
        android:id="@+id/label_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximity_sensor_format"
        android:layout_marginBottom="32dp"/>

</LinearLayout>